--- a/liftoff-assignments/P1.md
+++ b/liftoff-assignments/P1.md
@@ -1,4 +1,3 @@
 #Documents associated with step P1 for the project
-austin-2018.github.io/liftoff-assignments/Screen Shot 2018-04-09 at 8.11.46 PM.png
-![Screen Shoat](/liftoff-assignments/Screen Shot 2018-04-09 at 8.11.46 PM.png)
+![GitHub Logo](/P1_8_11PM.png)
 Format: ![Alt Text](url)
