--- a/liftoff-assignments/P1.md
+++ b/liftoff-assignments/P1.md
@@ -1,3 +1,3 @@
 #Documents associated with step P1 for the project
-![GitHub Logo](/P1_8_11PM.png)
-Format: ![Alt Text](url)
+![Screen Shot of Pull Request for P1](P1_8_11PM.png)
+Format: ![Screen Shot of Pull Request for P1](P1_8_11PM.png)
