--- a/liftoff-assignments/P1.md
+++ b/liftoff-assignments/P1.md
@@ -1,3 +1,3 @@
 #Documents associated with step P1 for the project
-![Screen Shot of Pull Request for P1](/P1_ 8._11PM.png)
+![Screen Shot of Pull Request for P1](P1_ 8._11PM.png)
 Format: ![Screen Shot of Pull Request for P1](P1_ 8._11PM.png)
