--- a/liftoff-assignments/P1.md
+++ b/liftoff-assignments/P1.md
@@ -1,3 +1,5 @@
 #Documents associated with step P1 for the project
+
+### Screen Shots
 ![Screen Shot of Pull Request for P1](P1PullRequest.png)
-Format: ![](/P1PullRequest.png)
+Format: ![](P1PullRequest.png)
