--- a/liftoff-assignments/P1.md
+++ b/liftoff-assignments/P1.md
@@ -1,4 +1,11 @@
 # Documents associated with step P1 for the project
+## Screen Shots
 
-### Screen Shots
+### Pull Requests
 ![Screen Shot of Pull Request for P1](P1PullRequest.png)
+
+### Meetup
+
+![Screen Shot of Pull Request for P1](P1Meetup1.png)
+
+
