--- a/setup/VS2017.md
+++ b/setup/VS2017.md
@@ -1,5 +1,9 @@
 # MODIFICATIONS NECESSARY TO VS COMMUNITY 2017
 
+#### Multiple build failures out of the box when applying IoT templates to Visual Studio Community 2017
+#### Commonly failed to import projects 
+
+### Modification of VS 2017 for this project via VSIX Installer
 
 #### Windows IoT Core Project Templates for VS 2017
 #### https://marketplace.visualstudio.com/items?itemName=MicrosoftIoT.WindowsIoTCoreProjectTemplatesforVS15
